# State-Machine-Template

./: .gitignore  App_Config_Template.h  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  PLATFORM_GUIDE.md  QUICK_REFERENCE.txt  Quick-Guide.md  README.md  README_v1_old.md  REVIEW_FINDINGS.md  Reference_Guide.txt  STATE_DIAGRAM.txt  TESTING_GUIDE.txt  VERIFICATION_CHECKLIST.md  app_main.c  app_main.h  main.c
config/: app_config_template.h
examples/: CMakeLists.txt  basic_example.c  simulation_example.c
include/sm_framework/: sm_config.h  sm_debug.h  sm_error_handler.h  sm_framework.h  sm_platform.h  sm_state_machine.h  sm_types.h
src/app/: app_main.c
src/core/: sm_debug.c  sm_error_handler.c  sm_state_machine.c
src/platform/: sm_platform_weak.c
